--- a/LMS-M/assets/css/visco/education.css
+++ b/LMS-M/assets/css/visco/education.css
@@ -32,8 +32,14 @@
 .tab-pane .pane-cons {margin-bottom:1.6rem;}
 
 .oa-aps .bg-cover {height:12.5rem;background-image:url('../../../assets/images/educate/bg-@sample01.png');background-repeat: no-repeat;background-position: 50% 50%;background-size:auto 100%;overflow:hidden;position: relative;text-align: center;}
-.oa-aps .bg-cover p {position:absolute;left:50%;bottom:2rem;transform:translateX(-50%);padding-right: 1.6rem;cursor: pointer;margin: 0 auto;font-weight:400;}
-.oa-aps .bg-cover p i {position:absolute;right:0rem;top:50%;transform:translateY(-50%);font-size:1.6rem;}
+.oa-aps .bg-cover form {width:50%;margin: 0 auto;margin-top:2.1rem;}
+.oa-aps .bg-cover form input[type="search"] {background-color: rgba( 255, 255, 255, 0 );border:1px solid #fff;color:#fff;}
+.oa-aps .bg-cover form button i {color:#fff;}
+.oa-aps .bg-cover form input::placeholder {color:#fff;}
+@media (max-width: 992px) {
+	.oa-aps .bg-cover form {width:90%;}
+}
+
 .oa-aps .days {text-align: right;}
 .oa-aps .days p {display: inline-block;margin-left: 3rem;line-height:2rem;padding-left:1.4rem;position: relative;}
 .oa-aps .days p:first-child {margin-left: 0rem;}
@@ -48,15 +54,26 @@
 .oa-aps .menus p.on span {color:#fff;}
 .oa-aps .items {border-top: 1px solid #767676;}
 .oa-aps .items .tem {padding:0.6rem 0;border-bottom:1px solid #DCDCDC;}
-.oa-aps .items .tem .imgs {width:4.6rem;height:4.6rem;overflow: hidden;}
+.oa-aps .items .tem .imgs {width:6.4rem;height:6.4rem;overflow: hidden;}
 .oa-aps .items .tem .imgs img {width:100%;height:100%;}
-.oa-aps .items .tem .txts {width:calc(100% - 5.2rem);padding-bottom:2.16rem;position: relative;}
-.oa-aps .items .tem .txts .icons {position:absolute;left:0;bottom:0;}
+.oa-aps .items .tem .txts {width:calc(100% - 7rem);position: relative;}
+.oa-aps .items .tem .txts h6 {min-height: 3rem;}
 .oa-aps .items .tem .txts .icons span {padding-left:1.2rem;margin-right:0.6rem;line-height:1.6rem;position: relative;}
-.oa-aps .items .tem .txts .icons span i {position:absolute;left:0;top:50%;transform:translateY(-50%);font-size: 1.2rem;font-variation-settings:'FILL' 1,'wght' 100,'GRAD' -25,'opsz' 48;color:#999;margin-top:1px;}
+.oa-aps .items .tem .txts .icons span i {position:absolute;left:0;top:50%;transform:translateY(-50%);font-size: 1.2rem;font-variation-settings:'FILL' 1,'wght' 100,'GRAD' -25,'opsz' 48;color:#999;}
 .oa-aps .items .tem:hover {background-color:#F2F2F2;cursor: pointer;}
 .oa-aps .items .tem:hover .imgs img {transform: scale(1.2);transition-duration: 0.5s;cursor:pointer;}
 
+/*
+
+<span class="material-symbols-outlined">
+format_ink_highlighter
+</span>
+
+.oa-aps .items .tem .txts .icons {border: 1px solid red;}
+
+
+
+*/
 .oa-bps .bps-su {position:relative;min-height:16rem;}
 .oa-bps .bps-su .l-img {position:absolute;left:0;top:0;width:16rem;height:16rem;}
 .oa-bps .bps-su .l-img img {width:inherit;height:inherit;}
@@ -73,7 +90,7 @@
 	.oa-bps .bps-su .su-r .r-txts {margin-top:1rem}
 }
 
-.oa-bps .bps-list p {padding: 0.8rem 0;padding-left:8rem;position: relative;}
+.oa-bps .bps-list p {padding: 0.6rem 0;padding-left:8rem;position: relative;}
 .oa-bps .bps-list span:first-child {position: absolute;top:0.7rem;left:2.4rem;}
 @media (max-width: 992px) {
 	.oa-bps .bps-list p {padding-left:4.6rem;}
@@ -81,6 +98,7 @@
 }
 
 .oa-bps .bps-nots .notebox {padding:0.8rem 0;padding-left:0.6rem;border-bottom: 1px solid #E9EBEC;}
+.oa-bps .bps-nots .notebox p {min-height: 2.14rem;}
 .oa-bps .bps-nots .notebox:hover {background-color:#F2F2F2;cursor: pointer;}
 .oa-bps .bps-nots .notebox:hover p {font-weight: 400;color:#191919;}
 .oa-bps .bps-nots .icons span {padding-left:1.2rem;margin-right:0.6rem;line-height:1.6rem;position: relative;}
