--- a/LMS-M/assets/css/visco/education_inquiry.css
+++ b/LMS-M/assets/css/visco/education_inquiry.css
@@ -1,5 +1,6 @@
-@import url(common.css);
+@import url(common.css);odal
 
+.oe-aps-summary {background-color: #F0F3F7;}
 .oe-aps-summary {background-color: #F0F3F7;}
 .oe-aps-summary label {min-width:3rem;}
 .oe-aps-summary .s-back button {position: relative;}
@@ -13,6 +14,7 @@
 .oe-aps02 .list-group li .imgs img {width:inherit;height:inherit;}
 @media (max-width: 992px) {.oe-aps02 .list-group li .imgs {border: 1px solid red;display: none;}}
 .oe-aps02 .list-group li .badge {position: absolute;top:0;right:0;}
+.oe-aps02 .list-group li h6 {min-height:2.68rem;}
 .oe-aps02 .rights .r-box .icons span,
 .oe-aps02 .list-group li .icons span {margin-right:0.5rem;padding-left:1.3rem;line-height:1.5rem;position: relative;}
 .oe-aps02 .rights .r-box .icons span i,
@@ -35,7 +37,7 @@
 .oe-aps03 .t-box input {margin:0;padding:0;position: absolute;top:50%;left:0;transform:translateY(-50%);}
 .oe-aps03 .t-box label {margin: 0rem;padding: 0rem;margin-left: 1.2rem;font-weight: 300;display: block;}
 .oe-aps03 .t-box .icons span {margin-right:0.5rem;padding-left:1.3rem;line-height:1.5rem;position: relative;}
-.oe-aps03 .t-box .icons span i {position: absolute;top:0;left:0;line-height:1.5rem;display: inline-block;font-size: 1.24rem;}
+.oe-aps03 .t-box .icons span i {position: absolute;top:0;left:0;line-height:1.5rem;display: inline-block;font-size: 1.24rem;font-variation-settings:'FILL' 1,'wght' 100,'GRAD' -25,'opsz' 48;}
 .oe-aps03 .btn-group {padding-right: 9rem;}
 .oe-aps03 .sub-mits {border-top:1px solid #767676;}
 
