--- a/LMS-M/assets/css/visco/education.css
+++ b/LMS-M/assets/css/visco/education.css
@@ -29,12 +29,12 @@
 
 
 .oa-aps .bg-cover {height:12.5rem;background-image:url('../../../assets/images/educate/bg-@sample01.png');background-repeat: no-repeat;background-position: 50% 50%;background-size:auto 100%;overflow:hidden;position: relative;text-align: center;}
-.oa-aps .bg-cover form {width:50%;margin: 0 auto;margin-top:2.1rem;}
-.oa-aps .bg-cover form input[type="search"] {background-color: rgba( 255, 255, 255, 0 );border:1px solid #fff;color:#fff;}
-.oa-aps .bg-cover form button i {color:#fff;}
-.oa-aps .bg-cover form input::placeholder {color:#fff;}
+.oa-aps .bg-cover > div {width:50%;margin: 0 auto;margin-top:2.1rem;}
+.oa-aps .bg-cover > div input[type="search"] {background-color: rgba( 255, 255, 255, 0 );border:1px solid #fff;color:#fff;}
+.oa-aps .bg-cover > div button i {color:#fff;}
+.oa-aps .bg-cover > div input::placeholder {color:#fff;}
 @media (max-width: 992px) {
-	.oa-aps .bg-cover form {width:90%;}
+	.oa-aps .bg-cover > div {width:90%;}
 }
 
 .oa-aps .days {text-align: right;}
